# hirust-gen

./: Cargo.toml
src/: lib.rs
src/cmd/: cmd.md  code.rs  controller.rs  enum.md  enum.rs  enum_body.rs  file.rs  gen.rs  mod.rs
src/stubs/: code.stub  controller.stub  enum.stub
